# Nano-Reasoner

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  sft.yaml
notebooks/: unified_rl_training.ipynb  unified_rl_training_v2.ipynb
scripts/: inference.py  train.py
src/: __init__.py  config_parser.py  dataset.py  model.py  trainer.py  utils.py
